--- a/learnwords/Resources/Base.lproj/Main.storyboard
+++ b/learnwords/Resources/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="startLearningBg" translatesAutoresizingMaskIntoConstraints="NO" id="3gr-VU-4Ux">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
+                                                    <rect key="frame" x="0.0" y="20" width="414" height="210"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Learning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9BU-Nv-VHA">
                                                     <rect key="frame" x="108.33333333333333" y="93" width="197.33333333333337" height="64"/>
@@ -44,9 +44,9 @@
                                             <constraints>
                                                 <constraint firstItem="9BU-Nv-VHA" firstAttribute="centerY" secondItem="t3V-Zz-HUr" secondAttribute="centerY" id="3t2-br-gqD"/>
                                                 <constraint firstItem="9BU-Nv-VHA" firstAttribute="centerX" secondItem="t3V-Zz-HUr" secondAttribute="centerX" id="4f9-1K-mpd"/>
-                                                <constraint firstItem="3gr-VU-4Ux" firstAttribute="top" secondItem="t3V-Zz-HUr" secondAttribute="top" id="710-Ud-pnO"/>
+                                                <constraint firstItem="3gr-VU-4Ux" firstAttribute="top" secondItem="t3V-Zz-HUr" secondAttribute="top" constant="20" id="710-Ud-pnO"/>
                                                 <constraint firstItem="3gr-VU-4Ux" firstAttribute="leading" secondItem="t3V-Zz-HUr" secondAttribute="leading" id="B20-qP-26a"/>
-                                                <constraint firstAttribute="bottom" secondItem="3gr-VU-4Ux" secondAttribute="bottom" id="XAQ-2q-gKj"/>
+                                                <constraint firstAttribute="bottom" secondItem="3gr-VU-4Ux" secondAttribute="bottom" constant="19.666666666666657" id="XAQ-2q-gKj"/>
                                                 <constraint firstAttribute="trailing" secondItem="3gr-VU-4Ux" secondAttribute="trailing" id="vvn-in-94R"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -63,7 +63,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="statsBg" translatesAutoresizingMaskIntoConstraints="NO" id="4fx-sP-HLb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
+                                                    <rect key="frame" x="0.0" y="20" width="414" height="210"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Statistics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWV-2P-NVJ">
                                                     <rect key="frame" x="103.66666666666669" y="93" width="207" height="64"/>
@@ -74,12 +74,12 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="4fx-sP-HLb" secondAttribute="bottom" id="2j7-RA-iyO"/>
+                                                <constraint firstAttribute="bottom" secondItem="4fx-sP-HLb" secondAttribute="bottom" constant="19.666666666666657" id="2j7-RA-iyO"/>
                                                 <constraint firstItem="TWV-2P-NVJ" firstAttribute="centerX" secondItem="y6E-p6-NnG" secondAttribute="centerX" id="3wF-R5-FNK"/>
                                                 <constraint firstAttribute="trailing" secondItem="4fx-sP-HLb" secondAttribute="trailing" id="9gv-ib-jJj"/>
                                                 <constraint firstItem="4fx-sP-HLb" firstAttribute="leading" secondItem="y6E-p6-NnG" secondAttribute="leading" id="PtT-fa-PZb"/>
                                                 <constraint firstItem="TWV-2P-NVJ" firstAttribute="centerY" secondItem="y6E-p6-NnG" secondAttribute="centerY" id="Z5w-G8-Smo"/>
-                                                <constraint firstItem="4fx-sP-HLb" firstAttribute="top" secondItem="y6E-p6-NnG" secondAttribute="top" id="fJK-yn-L8v"/>
+                                                <constraint firstItem="4fx-sP-HLb" firstAttribute="top" secondItem="y6E-p6-NnG" secondAttribute="top" constant="20" id="fJK-yn-L8v"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -95,7 +95,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settingsBg" translatesAutoresizingMaskIntoConstraints="NO" id="4XN-cG-lBG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
+                                                    <rect key="frame" x="0.0" y="20" width="414" height="210"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ls-Q7-dGV">
                                                     <rect key="frame" x="113.66666666666669" y="93" width="187" height="64"/>
@@ -107,10 +107,10 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="4XN-cG-lBG" firstAttribute="leading" secondItem="yr1-mQ-tHg" secondAttribute="leading" id="3EM-3i-LN0"/>
-                                                <constraint firstAttribute="bottom" secondItem="4XN-cG-lBG" secondAttribute="bottom" id="CtL-4k-4dP"/>
+                                                <constraint firstAttribute="bottom" secondItem="4XN-cG-lBG" secondAttribute="bottom" constant="19.666666666666657" id="CtL-4k-4dP"/>
                                                 <constraint firstItem="6Ls-Q7-dGV" firstAttribute="centerX" secondItem="yr1-mQ-tHg" secondAttribute="centerX" id="Duf-GQ-10R"/>
                                                 <constraint firstAttribute="trailing" secondItem="4XN-cG-lBG" secondAttribute="trailing" id="Mfc-T9-QSY"/>
-                                                <constraint firstItem="4XN-cG-lBG" firstAttribute="top" secondItem="yr1-mQ-tHg" secondAttribute="top" id="YoF-es-EL3"/>
+                                                <constraint firstItem="4XN-cG-lBG" firstAttribute="top" secondItem="yr1-mQ-tHg" secondAttribute="top" constant="20" id="YoF-es-EL3"/>
                                                 <constraint firstItem="6Ls-Q7-dGV" firstAttribute="centerY" secondItem="yr1-mQ-tHg" secondAttribute="centerY" id="ggD-b7-gob"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -205,8 +205,38 @@
                                 <subviews>
                                     <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCD-oH-kaY" userLabel="cardBackground">
                                         <rect key="frame" x="0.0" y="0.0" width="373" height="515"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WSa-0U-lzY">
+                                                <rect key="frame" x="277" y="0.0" width="88" height="515"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="88" id="bzg-AQ-Eo9"/>
+                                                    <constraint firstAttribute="height" constant="515" id="zmc-UJ-qIs"/>
+                                                </constraints>
+                                                <connections>
+                                                    <action selector="rightSideBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VAM-aA-iUT"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJI-XN-nza">
+                                                <rect key="frame" x="0.0" y="0.0" width="88" height="515"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="88" id="9ot-Mn-m5x"/>
+                                                </constraints>
+                                                <connections>
+                                                    <action selector="leftSideBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PT2-9T-PiF"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
                                         <color key="backgroundColor" red="0.58039215686274503" green="0.12941176470588234" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <gestureRecognizers/>
+                                        <constraints>
+                                            <constraint firstItem="eJI-XN-nza" firstAttribute="bottom" secondItem="WSa-0U-lzY" secondAttribute="bottom" id="1Ai-dT-Rpa"/>
+                                            <constraint firstItem="WSa-0U-lzY" firstAttribute="top" secondItem="FCD-oH-kaY" secondAttribute="topMargin" constant="-8" id="2gu-rO-isM"/>
+                                            <constraint firstItem="eJI-XN-nza" firstAttribute="top" secondItem="WSa-0U-lzY" secondAttribute="top" id="GDB-sD-D9D"/>
+                                            <constraint firstItem="eJI-XN-nza" firstAttribute="leading" secondItem="FCD-oH-kaY" secondAttribute="leading" id="e5g-Sn-RaP"/>
+                                            <constraint firstItem="WSa-0U-lzY" firstAttribute="trailing" secondItem="FCD-oH-kaY" secondAttribute="trailingMargin" id="mTE-A3-M8g"/>
+                                        </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wordLbl" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="45" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zhu-1p-TuY">
                                         <rect key="frame" x="21" y="0.0" width="349" height="175"/>
@@ -233,7 +263,7 @@
                                 </connections>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nxp-Fj-zhb">
-                                <rect key="frame" x="365" y="597" width="49" height="49"/>
+                                <rect key="frame" x="183" y="597" width="49" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="helpIcon">
@@ -249,22 +279,22 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="leading" secondItem="Ewl-e9-mj8" secondAttribute="leading" id="1MG-Qf-Iak"/>
-                            <constraint firstItem="A1a-5O-A1J" firstAttribute="leading" secondItem="nxp-Fj-zhb" secondAttribute="trailing" constant="-125" id="5ZC-Qw-p1j"/>
+                            <constraint firstItem="A1a-5O-A1J" firstAttribute="leading" secondItem="nxp-Fj-zhb" secondAttribute="trailing" constant="57" id="5ZC-Qw-p1j"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="leading" secondItem="DtC-kp-pi0" secondAttribute="leading" id="65C-DR-v1o"/>
                             <constraint firstItem="g5P-AN-71M" firstAttribute="leading" secondItem="gYc-Rx-Ofx" secondAttribute="leadingMargin" constant="4" id="6Br-4a-gzH"/>
-                            <constraint firstItem="nxp-Fj-zhb" firstAttribute="centerX" secondItem="DtC-kp-pi0" secondAttribute="centerX" constant="182.5" id="7RJ-M1-Exh"/>
+                            <constraint firstItem="nxp-Fj-zhb" firstAttribute="centerX" secondItem="DtC-kp-pi0" secondAttribute="centerX" constant="0.5" id="7RJ-M1-Exh"/>
                             <constraint firstItem="A1a-5O-A1J" firstAttribute="trailing" secondItem="DtC-kp-pi0" secondAttribute="trailing" id="8Cu-Wn-Rmg"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="8" id="CNJ-eK-2jV"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="firstBaseline" secondItem="A1a-5O-A1J" secondAttribute="firstBaseline" id="IeY-UQ-b1x"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="trailing" secondItem="Ewl-e9-mj8" secondAttribute="trailing" id="aO7-om-KjU"/>
-                            <constraint firstItem="nxp-Fj-zhb" firstAttribute="leading" secondItem="lqz-Ni-zRL" secondAttribute="trailing" constant="240" id="atl-xG-5fv"/>
+                            <constraint firstItem="nxp-Fj-zhb" firstAttribute="leading" secondItem="lqz-Ni-zRL" secondAttribute="trailing" constant="58" id="atl-xG-5fv"/>
                             <constraint firstAttribute="trailing" secondItem="A1a-5O-A1J" secondAttribute="trailing" id="fmm-zW-nN3"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="top" secondItem="nxp-Fj-zhb" secondAttribute="top" id="fyn-cD-ict"/>
                             <constraint firstItem="B8t-H7-Na5" firstAttribute="top" secondItem="cUG-WI-TIj" secondAttribute="top" constant="10" id="gI6-L7-reb"/>
                             <constraint firstItem="g5P-AN-71M" firstAttribute="top" secondItem="B8t-H7-Na5" secondAttribute="bottom" constant="-45" id="ibA-ZQ-pnZ"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="top" secondItem="A1a-5O-A1J" secondAttribute="bottom" id="jPw-So-3jE"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="bottom" secondItem="cUG-WI-TIj" secondAttribute="bottom" id="kNw-en-phG"/>
-                            <constraint firstItem="g5P-AN-71M" firstAttribute="centerX" secondItem="nxp-Fj-zhb" secondAttribute="centerX" constant="-180.5" id="pTA-I1-qHz"/>
+                            <constraint firstItem="g5P-AN-71M" firstAttribute="centerX" secondItem="nxp-Fj-zhb" secondAttribute="centerX" constant="1.5" id="pTA-I1-qHz"/>
                             <constraint firstItem="B8t-H7-Na5" firstAttribute="leading" secondItem="lqz-Ni-zRL" secondAttribute="leading" id="pj3-9a-NQn"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="top" secondItem="nxp-Fj-zhb" secondAttribute="bottom" id="sYz-3B-mS9"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="top" secondItem="DtC-kp-pi0" secondAttribute="bottom" id="tfJ-nB-4wn"/>
@@ -290,7 +320,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="20.289855072463769" y="28.125"/>
+            <point key="canvasLocation" x="20.289855072463769" y="27.717391304347828"/>
         </scene>
         <!--Help Popover View Controller-->
         <scene sceneID="KN3-0b-H9B">
@@ -680,6 +710,6 @@
         <image name="statsBg" width="746" height="396"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EGY-ta-eJm"/>
+        <segue reference="sCn-KG-v7r"/>
     </inferredMetricsTieBreakers>
 </document>
